tests/rt/pos/ifc/lev01.trp
let val x = `{alice}` raisedTo `{alice}`
    val y = `{bob}` raisedTo `{bob}`
    val _ = printWithLabels (lub (x, y))
    val _ = debugpc()
    val _ = printWithLabels (glb (x, y))
    val _ = debugpc()
in ()
end
