tests/rt/neg/ifc/cert-neg-01.trp
let val x = 1 
    val _ = cert (x) 
    val u = 10 raisedTo `{alice}`
in cert(u) 
end